--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "cypress open"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -39,7 +39,7 @@
     "@types/node": "^12.11.1",
     "chance": "^1.1.7",
     "codelyzer": "^6.0.0",
-    "cypress": "^6.2.0",
+    "cypress": "^6.2.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -63,5 +63,6 @@
   "bugs": {
     "url": "https://github.com/HadjHassineJawher/Zanimo/issues"
   },
-  "homepage": "https://github.com/HadjHassineJawher/Zanimo#readme"
+  "homepage": "https://github.com/HadjHassineJawher/Zanimo#readme",
+  "keywords": []
 }
